--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,16 @@
 
 @import "{{ site.theme }}";
 
+body {
+  background: #f2f2f2
+}
 
 #header_wrap,
 #footer_wrap {
   display: none;
+}
+
+#main_content_wrap {
+  border-top: none;
+  border-bottom: none;
 }
